# Acs-StudentManagementSystem

./: README.md  pyproject.toml  requirements.txt
apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_company.py  0002_company_user.py  0002_customuser_company.py  0002_customuser_company_alter_company_user.py  0003_alter_company_user_alter_customuser_company.py  0003_company_user.py  0003_customuser_company_alter_company_user.py  0004_remove_company_user.py  0004_remove_customuser_company.py  0005_customuser_company.py  0006_alter_customuser_company.py  0006_remove_company_user_company_user.py  0007_customusercompany.py  0007_usercompanyrelation.py  0008_remove_customuser_company.py  0008_remove_customuser_company_customuser_company.py  0009_rename_company_customuser_companies.py
apps/accounts/templatetags/: company_tags.py  custom_filters.py
apps/pages/: urls.py  views.py
apps/students/: admin.py  models.py  urls.py  utils.py  views.py
apps/students/migrations/: 0001_initial.py  0002_alter_student_stu_id.py  0002_student_company.py  0003_remove_student_company_student_company.py  0003_remove_student_password_remove_student_user_name_and_more.py  0003_student_is_online.py  0004_alter_student_gender.py  0005_student_company.py
apps/students/templatetags/: student_count.py
config/: settings.py  urls.py
templates/: _base.html  home.html
templates/account/: login.html  logout.html
templates/app/: company.html  students.html
templates/partials/: navbar.html
templates/registration/: login.html
