[tool.poetry]
name = "acs-studentmanagementsystem"
version = "0.1.0"
description = ""
authors = ["kostasvit <kostasvit@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "4.2"
django-crispy-forms = "^2.1"
crispy-bootstrap4 = "^2024.1"
django-allauth = "^0.61.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
